--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,89 @@
+@use 'sass:math';
+
 html {
   font-family: sans-serif;
   font-size: 62.5%;
   background: hsl(0deg, 0%, 10%);
   color: hsl(0deg, 0%, 90%);
+  height: 100%;
 }
 
 body {
   font-size: 1.6rem;
+  height: 100%;
 }
 
 * {
   box-sizing: border-box;
+}
+
+main {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  min-height: 100%;
+}
+
+.bar-chart {
+  border-top: 0.1rem dashed hsl(0, 50%, 50%);
+  position: relative;
+  height: 20rem;
+  width: 100%;
+  max-width: 50rem;
+  margin: 0;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  div {
+    display: block;
+    width: 100%;
+    background: blue;
+    min-height: 0.1rem;
+    transform-origin: bottom;
+    animation: rise 0.25s ease-in-out both;
+
+    @for $i from 0 through 48 {
+      &:nth-child(#{$i}) {
+        animation-delay: $i * math.div(1s, 48);
+      }
+    }
+
+    display: flex;
+    justify-content: center;
+
+    p {
+      position: absolute;
+      bottom: -2.25rem;
+      font-size: 0.9rem;
+      font-weight: 800;
+    }
+  }
+
+  div + div {
+    margin-left: 0.1rem;
+  }
+}
+
+@keyframes rise {
+  0% {
+    transform: scaleY(0);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+.actions {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 4rem;
+
+  button {
+    margin-left: 0.5rem;
+  }
 }
